# lab4var3

./: AnaliticalConstEquation.cpp  AnaliticalConstEquation.h  CMakeLists.txt  NumericalConstEquation.cpp  NumericalConstEquation.h  NumericalVariableEquation.cpp  NumericalVariableEquation.h  Tail.txt  func_init.h  main.cpp  types.h
